course-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cloudstudents
  name: deployment-2048-amruthesh
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048-amruthesh
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048-amruthesh
    spec:
      containers:
      - image: 991524241826.dkr.ecr.ap-south-2.amazonaws.com/course/amruthesh:latest
        imagePullPolicy: Always
        name: app-2048-amruthesh
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  namespace: cloudstudents
  name: service-2048-amruthesh
spec:
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048-amruthesh
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cloudstudents
  name: ingress-2048-amruthesh
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: students-app
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /amruthesh-student
          pathType: Prefix
          backend:
            service:
              name: service-2048-amruthesh
              port:
                number: 3001
